TestRepo2/src/objects/NABCA_Sales_Data__c.object
<CustomObject>
    <description>National Alcohol Beverage Control Association sales data</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NABCA Sales Data</relationshipLabel>
        <relationshipName>NABCA_Sales2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <referenceTo>NABCA_Brand__c</referenceTo>
        <relationshipLabel>NABCA Sales Data</relationshipLabel>
        <relationshipName>NABCA_Sales2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last12_Months_Dollar_value_10__c</fullName>
        <formula>Month27_ShelfDollar_Volume__c +
        		 Month26_ShelfDollar_Volume__c +
        		 Month25_ShelfDollar_Volume__c +
        		 Month24_ShelfDollar_Volume__c +
        		 Month23_ShelfDollar_Volume__c +
        		 Month22_ShelfDollar_Volume__c +
        		 Month21_ShelfDollar_Volume__c +
        		 Month20_ShelfDollar_Volume__c +
        		 Month19_ShelfDollar_Volume__c +
        		 Month18_ShelfDollar_Volume__c +
        		 Month17_ShelfDollar_Volume__c +
        		 Month16_ShelfDollar_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last12 Months Dollar value 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last12_Months_Dollar_value_11__c</fullName>
        <formula>Month26_ShelfDollar_Volume__c +
        		 Month25_ShelfDollar_Volume__c +
        		 Month24_ShelfDollar_Volume__c +
        		 Month23_ShelfDollar_Volume__c +
        		 Month22_ShelfDollar_Volume__c +
        		 Month21_ShelfDollar_Volume__c +
        		 Month20_ShelfDollar_Volume__c +
        		 Month19_ShelfDollar_Volume__c +
        		 Month18_ShelfDollar_Volume__c +
        		 Month17_ShelfDollar_Volume__c +
        		 Month16_ShelfDollar_Volume__c +
        		 Month15_ShelfDollar_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last12 Months Dollar value 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last12_Months_Dollar_value_12__c</fullName>
        <formula>Month25_ShelfDollar_Volume__c +
        		 Month24_ShelfDollar_Volume__c +
        		 Month23_ShelfDollar_Volume__c +
        		 Month22_ShelfDollar_Volume__c +
        		 Month21_ShelfDollar_Volume__c +
        		 Month20_ShelfDollar_Volume__c +
        		 Month19_ShelfDollar_Volume__c +
        		 Month18_ShelfDollar_Volume__c +
        		 Month17_ShelfDollar_Volume__c +
        		 Month16_ShelfDollar_Volume__c +
        		 Month15_ShelfDollar_Volume__c +
        		 Month14_ShelfDollar_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last12 Months Dollar value 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last12_Months_Dollar_value__c</fullName>
        <formula>Month36_ShelfDollar_Volume__c +
        		 Month35_ShelfDollar_Volume__c +
        		 Month34_ShelfDollar_Volume__c +
        		 Month33_ShelfDollar_Volume__c +
        		 Month32_ShelfDollar_Volume__c +
        		 Month31_ShelfDollar_Volume__c +
        		 Month30_ShelfDollar_Volume__c +
        		 Month29_ShelfDollar_Volume__c +
        		 Month28_ShelfDollar_Volume__c +
        		 Month27_ShelfDollar_Volume__c +
        		 Month26_ShelfDollar_Volume__c +
        		 Month25_ShelfDollar_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last12 Months Dollar value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_Months_Volume_10__c</fullName>
        <formula>Month27_9L_Volume__c + Month26_9L_Volume__c +Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c
+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c+Month18_9L_Volume__c+Month17_9L_Volume__c+Month16_9L_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 12 Months Volume 10</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_Months_Volume_11__c</fullName>
        <formula>Month26_9L_Volume__c + Month25_9L_Volume__c +Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c
+Month20_9L_Volume__c+Month19_9L_Volume__c+Month18_9L_Volume__c+Month17_9L_Volume__c+Month16_9L_Volume__c+Month15_9L_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 12 Months Volume 11</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_Months_Volume_12__c</fullName>
        <formula>Month25_9L_Volume__c + Month24_9L_Volume__c +Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c
+Month19_9L_Volume__c+Month18_9L_Volume__c+Month17_9L_Volume__c+Month16_9L_Volume__c+Month15_9L_Volume__c+Month14_9L_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 12 Months Volume 12</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_Months_Volume__c</fullName>
        <formula>Month36_9L_Volume__c + Month35_9L_Volume__c +Month34_9L_Volume__c+Month33_9L_Volume__c+Month32_9L_Volume__c+Month31_9L_Volume__c
+Month30_9L_Volume__c+Month29_9L_Volume__c+Month28_9L_Volume__c+Month27_9L_Volume__c+Month26_9L_Volume__c+Month25_9L_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 12 Months Volume</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_year_Shelfdollar_data_10__c</fullName>
        <formula>Month4_ShelfDollar_Volume__c+
        		 Month5_ShelfDollar_Volume__c+
        		 Month6_ShelfDollar_Volume__c+
        		 Month7_ShelfDollar_Volume__c+
        		 Month8_ShelfDollar_Volume__c+
        		 Month9_ShelfDollar_Volume__c+
        		 Month10_ShelfDollar_Volume__c+
        		 Month11_ShelfDollar_Volume__c+
        		 Month12_ShelfDollar_Volume__c+
        		 Month13_ShelfDollar_Volume__c+
        		 Month14_ShelfDollar_Volume__c+
        		 Month15_ShelfDollar_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last year Shelfdollar data 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_year_Shelfdollar_data_11__c</fullName>
        <formula>Month3_ShelfDollar_Volume__c+
        		 Month4_ShelfDollar_Volume__c+
        		 Month5_ShelfDollar_Volume__c+
        		 Month6_ShelfDollar_Volume__c+
        		 Month7_ShelfDollar_Volume__c+
        		 Month8_ShelfDollar_Volume__c+
        		 Month9_ShelfDollar_Volume__c+
        		 Month10_ShelfDollar_Volume__c+
        		 Month11_ShelfDollar_Volume__c+
        		 Month12_ShelfDollar_Volume__c+
        		 Month13_ShelfDollar_Volume__c+
        		 Month14_ShelfDollar_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last year Shelfdollar data 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_year_Shelfdollar_data_12__c</fullName>
        <formula>Month2_ShelfDollar_Volume__c+
        		 Month3_ShelfDollar_Volume__c+
        		 Month4_ShelfDollar_Volume__c+
        		 Month5_ShelfDollar_Volume__c+
        		 Month6_ShelfDollar_Volume__c+
        		 Month7_ShelfDollar_Volume__c+
        		 Month8_ShelfDollar_Volume__c+
        		 Month9_ShelfDollar_Volume__c+
        		 Month10_ShelfDollar_Volume__c+
        		 Month11_ShelfDollar_Volume__c+
        		 Month12_ShelfDollar_Volume__c+
        		 Month13_ShelfDollar_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last year Shelfdollar data 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_year_Shelfdollar_data__c</fullName>
        <formula>Month13_ShelfDollar_Volume__c+
        		 Month14_ShelfDollar_Volume__c+
        		 Month15_ShelfDollar_Volume__c+
        		 Month16_ShelfDollar_Volume__c+
        		 Month17_ShelfDollar_Volume__c+
        		 Month18_ShelfDollar_Volume__c+
        		 Month19_ShelfDollar_Volume__c+
        		 Month20_ShelfDollar_Volume__c+
        		 Month21_ShelfDollar_Volume__c+
        		 Month22_ShelfDollar_Volume__c+
        		 Month23_ShelfDollar_Volume__c+
        		 Month24_ShelfDollar_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last year Shelfdollar data</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_year_volume_data_10__c</fullName>
        <formula>Month4_9L_Volume__c+
        Month5_9L_Volume__c+
        Month6_9L_Volume__c+
        Month7_9L_Volume__c+
        Month8_9L_Volume__c+
        Month9_9L_Volume__c+
        Month10_9L_Volume__c+
        Month11_9L_Volume__c+
        Month12_9L_Volume__c+
        Month13_9L_Volume__c+
        Month14_9L_Volume__c+
        Month15_9L_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last year volume data 10</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_year_volume_data_11__c</fullName>
        <formula>Month3_9L_Volume__c+
        Month4_9L_Volume__c+
        Month5_9L_Volume__c+
        Month6_9L_Volume__c+
        Month7_9L_Volume__c+
        Month8_9L_Volume__c+
        Month9_9L_Volume__c+
        Month10_9L_Volume__c+
        Month11_9L_Volume__c+
        Month12_9L_Volume__c+
        Month13_9L_Volume__c+
        Month14_9L_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last year volume data 11</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_year_volume_data_12__c</fullName>
        <formula>Month2_9L_Volume__c+
        Month3_9L_Volume__c+
        Month4_9L_Volume__c+
        Month5_9L_Volume__c+
        Month6_9L_Volume__c+
        Month7_9L_Volume__c+
        Month8_9L_Volume__c+
        Month9_9L_Volume__c+
        Month10_9L_Volume__c+
        Month11_9L_Volume__c+
        Month12_9L_Volume__c+
        Month13_9L_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last year volume data 12</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_year_volume_data__c</fullName>
        <formula>Month13_9L_Volume__c+
        		 Month14_9L_Volume__c+
        		 Month15_9L_Volume__c+
        		 Month16_9L_Volume__c+
        		 Month17_9L_Volume__c+
        		 Month18_9L_Volume__c+
        		 Month19_9L_Volume__c+
        		 Month20_9L_Volume__c+
        		 Month21_9L_Volume__c+
        		 Month22_9L_Volume__c+
        		 Month23_9L_Volume__c+
        		 Month24_9L_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last year volume data</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month10_9L_Volume__c</fullName>
        <label>Current Month - 26</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month10_ShelfDollar_Volume__c</fullName>
        <label>SV Current Month - 26</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month11_9L_Volume__c</fullName>
        <label>Current Month - 25</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month11_ShelfDollar_Volume__c</fullName>
        <label>SV Current Month - 25</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month12_9L_Volume__c</fullName>
        <label>Current Month - 24</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month12_ShelfDollar_Volume__c</fullName>
        <label>SV Current Month - 24</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_End_Date__c</fullName>
        <label>Month End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Percent_Change_in_Dollar_10__c</fullName>
        <formula>((Last12_Months_Dollar_value_10__c-
        		   Last_year_Shelfdollar_data_10__c)/
        		   Last_year_Shelfdollar_data_10__c)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Change in Dollar 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Change_in_Dollar_11__c</fullName>
        <formula>((Last12_Months_Dollar_value_11__c-
        		   Last_year_Shelfdollar_data_11__c)/
        		   Last_year_Shelfdollar_data_11__c)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Change in Dollar 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Change_in_Dollar_12__c</fullName>
        <formula>((Last12_Months_Dollar_value_12__c-
        		   Last_year_Shelfdollar_data_12__c)/
        		   Last_year_Shelfdollar_data_12__c)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Change in Dollar 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Change_in_Dollar__c</fullName>
        <formula>((Last12_Months_Dollar_value__c -Last_year_Shelfdollar_data__c)/Last_year_Shelfdollar_data__c)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Change in Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Change_in_Volume_10__c</fullName>
        <formula>((Last_12_Months_Volume_10__c
        		 - Last_year_volume_data_10__c
        		 )/Last_year_volume_data_10__c)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Change in Volume 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Change_in_Volume_11__c</fullName>
        <formula>((Last_12_Months_Volume_11__c
        		 - Last_year_volume_data_11__c
        		 )/Last_year_volume_data_11__c)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Change in Volume 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Change_in_Volume_12__c</fullName>
        <formula>((Last_12_Months_Volume_12__c
        		 - Last_year_volume_data_12__c
        		 )/Last_year_volume_data_12__c)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Change in Volume 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Change_in_Volume__c</fullName>
        <formula>((Last_12_Months_Volume__c - Last_year_volume_data__c)/Last_year_volume_data__c)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Change in Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale_Composite_Key__c</fullName>
        <description>External Id for Sales Record (Material Code + Licensee code + NABCA state code)</description>
        <externalId>true</externalId>
        <label>Sale Composite Key</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ShelfDollar_for_Fiscal_Year_10__c</fullName>
        <formula>CASE(MONTH(Month_End_Date__c),
7 , Month27_ShelfDollar_Volume__c,
8 , Month27_ShelfDollar_Volume__c+Month26_ShelfDollar_Volume__c,
9 , Month27_ShelfDollar_Volume__c+Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c,
10, Month27_ShelfDollar_Volume__c+Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c,
11, Month27_ShelfDollar_Volume__c+Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c,
12, Month27_ShelfDollar_Volume__c+Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c,
1 , Month27_ShelfDollar_Volume__c+Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c,
2 , Month27_ShelfDollar_Volume__c+Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c,
3 , Month27_ShelfDollar_Volume__c+Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c,
4 , Month27_ShelfDollar_Volume__c+Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c+Month18_ShelfDollar_Volume__c,
5 , Month27_ShelfDollar_Volume__c+Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c+Month18_ShelfDollar_Volume__c+Month17_ShelfDollar_Volume__c,
6 , Month27_ShelfDollar_Volume__c+Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c+Month18_ShelfDollar_Volume__c+Month17_ShelfDollar_Volume__c+Month16_ShelfDollar_Volume__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShelfDollar for Fiscal Year 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShelfDollar_for_Fiscal_Year_11__c</fullName>
        <formula>CASE(MONTH(Month_End_Date__c),
7 , Month26_ShelfDollar_Volume__c,
8 , Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c,
9 , Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c,
10, Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c,
11, Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c,
12, Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c,
1 , Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c,
2 , Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c,
3 , Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c+Month18_ShelfDollar_Volume__c,
4 , Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c+Month18_ShelfDollar_Volume__c+Month17_ShelfDollar_Volume__c,
5 , Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c+Month18_ShelfDollar_Volume__c+Month17_ShelfDollar_Volume__c+Month16_ShelfDollar_Volume__c,
6 , Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c+Month18_ShelfDollar_Volume__c+Month17_ShelfDollar_Volume__c+Month16_ShelfDollar_Volume__c+Month15_ShelfDollar_Volume__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShelfDollar for Fiscal Year 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShelfDollar_for_Fiscal_Year_12__c</fullName>
        <formula>CASE(MONTH(Month_End_Date__c),
7 , Month25_ShelfDollar_Volume__c,
8 , Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c,
9 , Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c,
10, Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c,
11, Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c,
12, Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c,
1 , Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c,
2 , Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c+Month18_ShelfDollar_Volume__c,
3 , Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c+Month18_ShelfDollar_Volume__c+Month17_ShelfDollar_Volume__c,
4 , Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c+Month18_ShelfDollar_Volume__c+Month17_ShelfDollar_Volume__c+Month16_ShelfDollar_Volume__c,
5 , Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c+Month18_ShelfDollar_Volume__c+Month17_ShelfDollar_Volume__c+Month16_ShelfDollar_Volume__c+Month15_ShelfDollar_Volume__c,
6 , Month25_ShelfDollar_Volume__c+Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c+Month18_ShelfDollar_Volume__c+Month17_ShelfDollar_Volume__c+Month16_ShelfDollar_Volume__c+Month15_ShelfDollar_Volume__c+Month14_ShelfDollar_Volume__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShelfDollar for Fiscal Year 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShelfDollar_for_Fiscal_Year__c</fullName>
        <formula>CASE(MONTH(Month_End_Date__c),
7, Month36_ShelfDollar_Volume__c,
8, Month36_ShelfDollar_Volume__c+Month35_ShelfDollar_Volume__c,
9, Month36_ShelfDollar_Volume__c+Month35_ShelfDollar_Volume__c+Month34_ShelfDollar_Volume__c,
10,Month36_ShelfDollar_Volume__c+Month35_ShelfDollar_Volume__c+Month34_ShelfDollar_Volume__c+Month33_ShelfDollar_Volume__c,
11,Month36_ShelfDollar_Volume__c+Month35_ShelfDollar_Volume__c+Month34_ShelfDollar_Volume__c+Month33_ShelfDollar_Volume__c+Month32_ShelfDollar_Volume__c,
12,Month36_ShelfDollar_Volume__c+Month35_ShelfDollar_Volume__c+Month34_ShelfDollar_Volume__c+Month33_ShelfDollar_Volume__c+Month32_ShelfDollar_Volume__c+Month31_ShelfDollar_Volume__c,
1, Month36_ShelfDollar_Volume__c+Month35_ShelfDollar_Volume__c+Month34_ShelfDollar_Volume__c+Month33_ShelfDollar_Volume__c+Month32_ShelfDollar_Volume__c+Month31_ShelfDollar_Volume__c+Month30_ShelfDollar_Volume__c,
2, Month36_ShelfDollar_Volume__c+Month35_ShelfDollar_Volume__c+Month34_ShelfDollar_Volume__c+Month33_ShelfDollar_Volume__c+Month32_ShelfDollar_Volume__c+Month31_ShelfDollar_Volume__c+Month30_ShelfDollar_Volume__c+Month29_ShelfDollar_Volume__c,
3, Month36_ShelfDollar_Volume__c+Month35_ShelfDollar_Volume__c+Month34_ShelfDollar_Volume__c+Month33_ShelfDollar_Volume__c+Month32_ShelfDollar_Volume__c+Month31_ShelfDollar_Volume__c+Month30_ShelfDollar_Volume__c+Month29_ShelfDollar_Volume__c+Month28_ShelfDollar_Volume__c,
4, Month36_ShelfDollar_Volume__c+Month35_ShelfDollar_Volume__c+Month34_ShelfDollar_Volume__c+Month33_ShelfDollar_Volume__c+Month32_ShelfDollar_Volume__c+Month31_ShelfDollar_Volume__c+Month30_ShelfDollar_Volume__c+Month29_ShelfDollar_Volume__c+Month28_ShelfDollar_Volume__c+Month27_ShelfDollar_Volume__c,
5, Month36_ShelfDollar_Volume__c+Month35_ShelfDollar_Volume__c+Month34_ShelfDollar_Volume__c+Month33_ShelfDollar_Volume__c+Month32_ShelfDollar_Volume__c+Month31_ShelfDollar_Volume__c+Month30_ShelfDollar_Volume__c+Month29_ShelfDollar_Volume__c+Month28_ShelfDollar_Volume__c+Month27_ShelfDollar_Volume__c+Month26_ShelfDollar_Volume__c,
6, Month36_ShelfDollar_Volume__c+Month35_ShelfDollar_Volume__c+Month34_ShelfDollar_Volume__c+Month33_ShelfDollar_Volume__c+Month32_ShelfDollar_Volume__c+Month31_ShelfDollar_Volume__c+Month30_ShelfDollar_Volume__c+Month29_ShelfDollar_Volume__c+Month28_ShelfDollar_Volume__c+Month27_ShelfDollar_Volume__c+Month26_ShelfDollar_Volume__c+Month25_ShelfDollar_Volume__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShelfDollar for Fiscal Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shelfdollar_For_last_Fiscal_Year_10__c</fullName>
        <formula>CASE(MONTH(Month_End_Date__c),
7 , Month15_ShelfDollar_Volume__c,
8 , Month15_ShelfDollar_Volume__c+Month14_ShelfDollar_Volume__c,
9 , Month15_ShelfDollar_Volume__c+Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c,
10, Month15_ShelfDollar_Volume__c+Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c,
11, Month15_ShelfDollar_Volume__c+Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c,
12, Month15_ShelfDollar_Volume__c+Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c,
1 , Month15_ShelfDollar_Volume__c+Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c,
2 , Month15_ShelfDollar_Volume__c+Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c+Month8_ShelfDollar_Volume__c,
3 , Month15_ShelfDollar_Volume__c+Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c+Month8_ShelfDollar_Volume__c+Month7_ShelfDollar_Volume__c,
4 , Month15_ShelfDollar_Volume__c+Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c+Month8_ShelfDollar_Volume__c+Month7_ShelfDollar_Volume__c+Month6_ShelfDollar_Volume__c,
5 , Month15_ShelfDollar_Volume__c+Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c+Month8_ShelfDollar_Volume__c+Month7_ShelfDollar_Volume__c+Month6_ShelfDollar_Volume__c+Month5_ShelfDollar_Volume__c,
6 , Month15_ShelfDollar_Volume__c+Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c+Month8_ShelfDollar_Volume__c+Month7_ShelfDollar_Volume__c+Month6_ShelfDollar_Volume__c+Month5_ShelfDollar_Volume__c+Month4_ShelfDollar_Volume__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shelfdollar For last Fiscal Year 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shelfdollar_For_last_Fiscal_Year_11__c</fullName>
        <formula>CASE(MONTH(Month_End_Date__c),
7 , Month14_ShelfDollar_Volume__c,
8 , Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c,
9 , Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c,
10, Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c,
11, Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c,
12, Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c,
1 , Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c+Month8_ShelfDollar_Volume__c,
2 , Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c+Month8_ShelfDollar_Volume__c+Month7_ShelfDollar_Volume__c,
3 , Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c+Month8_ShelfDollar_Volume__c+Month7_ShelfDollar_Volume__c+Month6_ShelfDollar_Volume__c,
4 , Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c+Month8_ShelfDollar_Volume__c+Month7_ShelfDollar_Volume__c+Month6_ShelfDollar_Volume__c+Month5_ShelfDollar_Volume__c,
5 , Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c+Month8_ShelfDollar_Volume__c+Month7_ShelfDollar_Volume__c+Month6_ShelfDollar_Volume__c+Month5_ShelfDollar_Volume__c+Month4_ShelfDollar_Volume__c,
6 , Month14_ShelfDollar_Volume__c+Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c+Month8_ShelfDollar_Volume__c+Month7_ShelfDollar_Volume__c+Month6_ShelfDollar_Volume__c+Month5_ShelfDollar_Volume__c+Month4_ShelfDollar_Volume__c+Month3_ShelfDollar_Volume__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shelfdollar For last Fiscal Year 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>